2009-02-09  Raul Mateos  <raulofpandora@gmail.com>

	* include/styles/images/toggle.png: Added png file. GIF will be removed.
	
	* include/styles/menu.css, ie.css: Updated to use toggle.png. Updated
	headers.
	
	* include/config_process.php: Moved build to index (it was used by other
	files that didn't included this file). Updated year.
	
	* index.php: Updated build.
	
	* general/error_noconfig.php: Updated year.

2009-02-06  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/styles/menu.css: Updated to make it look good again
	
	* general/main_menu.php: Updated to make it look good again. Also 
	simplified to allow easier modification. If you want to make things
	visible/selected again externally (JS or COOKIE), use the IF/ELSE 
	construction with the big warning.
	
	* general/links_menu.php: Updated to conform to CSS
	
	* include/javascript/jquery.cookie.js: Added to mess with cookies for 
	menu. I will do this in a future update

2009-02-05  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* general/header.php: Added alt tags to images
	
	* include/functions_db.php: Fixed get_agent_modules function
	
	* include/functions_html.php: Fixed print_image and print_table to conform
	to standards
	
	* index.php: Removed extra closing div that shouldn't be there and conform
	to standards
	
	* godmode/agentes/alert_manager.php: Fixed JavaScript messyness for XHTML

2009-02-05  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/alert_manager.php: Hide actions and templates form.
	Removed unncessary check when there's no module set.

	* include/styles/ie.css: Added to repository. IE fixes. Added fixes
	for menu, because IE doesn't support hover in other elements than a.

	* include/styles/menu.css: Removed font-family property.

	* include/functions_db.php: Style correction.

	* index.php: Added IE CSS fixes if needed.

2009-02-05  Esteban Sanchez  <estebans@artica.es>
	
	* operation/visual_console/render_view.php: Recoverd countdown when